[chore ch1436]: - reverted the control bar position to 0 since i found the real issue for that not being visible

--- a/src/scss/skin-modern/components/_controlbar.scss
+++ b/src/scss/skin-modern/components/_controlbar.scss
@@ -88,7 +88,7 @@
 
 &.#{$prefix}-fullscreen {
   .#{$prefix}-ui-controlbar {
-    bottom: -$controlbar-height !important;
+    bottom: 0 !important;
     transition: bottom 1s;
   }
 
